syntax = "proto3";

option go_package = "example.com/grpc-todo";
package authentication;

import "buf/validate/validate.proto";

service AuthenticationService {
    rpc SignIn(SignInRequest) returns (SignInReply) {}
}

message SignInRequest {
    string username = 1 [(buf.validate.field).string.min_len = 3, (buf.validate.field).string.max_len = 50];
    string password = 2 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 15];
}

message SignInReply {
    string token = 1; 
}